Post-Edit Compare 8.0.5.71: Minor style changes

--- a/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/HTMLReportIntegration/ReportView/Controls/ReportViewFilter/ReportViewFilter.xaml
+++ b/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/HTMLReportIntegration/ReportView/Controls/ReportViewFilter/ReportViewFilter.xaml
@@ -860,11 +860,11 @@
                     Grid.Column="1"
                     VerticalAlignment="Bottom"
                     Height="30"
+                    Style="{StaticResource Sdl.Button.GeneralStyle}"
                     Padding="5"
                     Click="PerformActionButton_OnClick"
                     HorizontalAlignment="Right"
                     BorderThickness="1"
-                    Style="{StaticResource MenuButtonStyle}"
                     Content="Perform Action" />
             <Border Grid.Row="3"
                     x:Name="UpdatedSegmentsNotification"
