--- a/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/HTMLReportIntegration/ReportView/Controls/ReportFolderExplorer.xaml
+++ b/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/HTMLReportIntegration/ReportView/Controls/ReportFolderExplorer.xaml
@@ -27,7 +27,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*"
                            MinHeight="100" />
-            <RowDefinition Height="80" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal"
@@ -91,23 +91,17 @@
             </DataGrid>
         </Border>
 
-        <StackPanel Grid.Row="2"
-                    Orientation="Horizontal"
-                    HorizontalAlignment="Right">
+        <Button Content="OK"
+                Click="OkButton_Click"
+                Style="{StaticResource Sdl.Button.GeneralStyle}"
+                IsDefault="True"
+                Grid.Row="2"
+                Height="23"
+                Width="80"
+                Cursor="Hand"
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Right"
+                Margin="0,10,5,10" />
 
-            <Button Content="OK"
-                    Click="OkButton_Click"
-                    Padding="10,5"
-                    IsDefault="True"
-                    Width="120"
-                    BorderThickness="0"
-                    Cursor="Hand"
-                    FontSize="14"
-                    VerticalAlignment="Bottom"
-                    FontWeight="Bold"
-                    HorizontalAlignment="Right"
-                    Margin="0,10,10,10" />
-
-        </StackPanel>
     </Grid>
 </Window>
